--- a/MoppApp/MoppApp/Base.lproj/Main.storyboard
+++ b/MoppApp/MoppApp/Base.lproj/Main.storyboard
@@ -22,11 +22,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pn0-1M-0Go">
-                                <rect key="frame" x="16" y="64" width="119" height="30"/>
-                                <state key="normal" title="Vali kaarilugejaga"/>
+                                <rect key="frame" x="16" y="64" width="111" height="30"/>
+                                <state key="normal" title="Vali kaardilugeja"/>
                                 <connections>
-                                    <action selector="selectReaderTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ii9-TE-2Ce"/>
-                                    <segue destination="9wT-uP-hj4" kind="show" id="OWw-C3-xUg"/>
+                                    <segue destination="9wT-uP-hj4" kind="show" identifier="selectReader" id="OWw-C3-xUg"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -40,6 +39,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="28" y="37"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pqK-ei-LxZ">
@@ -60,7 +60,7 @@
         <!--Reader Selection View Controller-->
         <scene sceneID="baq-Na-dlx">
             <objects>
-                <viewController id="9wT-uP-hj4" customClass="ReaderSelectionViewController" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="9wT-uP-hj4" customClass="ReaderSelectionViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="1d1-i2-yJk"/>
                         <viewControllerLayoutGuide type="bottom" id="5T4-3P-uwV"/>
@@ -72,6 +72,29 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cl5-hf-5ru">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PeripheralCell" textLabel="aIZ-hF-ZD8" style="IBUITableViewCellStyleDefault" id="Ha0-Bt-My0">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ha0-Bt-My0" id="TbU-BS-04N">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="aIZ-hF-ZD8">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="9wT-uP-hj4" id="VgX-KK-Ffs"/>
+                                    <outlet property="delegate" destination="9wT-uP-hj4" id="XUs-JS-Sv9"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -82,10 +105,15 @@
                             <constraint firstItem="cl5-hf-5ru" firstAttribute="top" secondItem="1d1-i2-yJk" secondAttribute="bottom" id="wMz-wc-40R"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="cl5-hf-5ru" id="Abd-6S-zlr"/>
+                        <segue destination="lML-8v-Axg" kind="unwind" identifier="unwindReaderSelection" unwindAction="unwindFromReaderSelection:" id="nmI-PU-kxR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8in-Uw-TvY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="lML-8v-Axg" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1014" y="38"/>
+            <point key="canvasLocation" x="996" y="37"/>
         </scene>
     </scenes>
 </document>
