--- a/MoppLib/MoppLib/ReaderSelection.storyboard
+++ b/MoppLib/MoppLib/ReaderSelection.storyboard
@@ -32,16 +32,44 @@
                         <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="xhR-kt-bau">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Card reader is not connected. Please make sure your reader is turned on and select reader." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VuB-7g-kDf">
+                                    <rect key="frame" x="20" y="19.5" width="335" height="61"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SAV-JS-0dB">
+                                    <rect key="frame" x="0.0" y="99" width="375" height="1"/>
+                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="V0C-LH-Qf6"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="VuB-7g-kDf" secondAttribute="trailing" constant="20" id="4gg-3r-oJ0"/>
+                                <constraint firstAttribute="trailing" secondItem="SAV-JS-0dB" secondAttribute="trailing" id="aNM-jQ-dhg"/>
+                                <constraint firstItem="SAV-JS-0dB" firstAttribute="leading" secondItem="xhR-kt-bau" secondAttribute="leading" id="hT2-EZ-fx9"/>
+                                <constraint firstItem="VuB-7g-kDf" firstAttribute="leading" secondItem="xhR-kt-bau" secondAttribute="leading" constant="20" id="jDa-ub-6X7"/>
+                                <constraint firstItem="VuB-7g-kDf" firstAttribute="centerY" secondItem="xhR-kt-bau" secondAttribute="centerY" id="sty-JJ-X9z"/>
+                                <constraint firstAttribute="bottom" secondItem="SAV-JS-0dB" secondAttribute="bottom" id="zZ7-V9-JfE"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PeripheralCell" textLabel="Ncn-tn-J6A" style="IBUITableViewCellStyleDefault" id="fUh-VV-8Kg">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="128" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fUh-VV-8Kg" id="dCW-8F-U70">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ncn-tn-J6A">
-                                            <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                            <rect key="frame" x="15" y="0.0" width="345" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -64,10 +92,13 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="infoLabel" destination="VuB-7g-kDf" id="0nc-ko-8DF"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uOt-2g-sik" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-34" y="143"/>
+            <point key="canvasLocation" x="-34.399999999999999" y="142.57871064467767"/>
         </scene>
     </scenes>
 </document>
