Act on card reader status changes

--- a/MoppApp/MoppApp/Landing.storyboard
+++ b/MoppApp/MoppApp/Landing.storyboard
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ylY-Rn-2Bi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ylY-Rn-2Bi">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Signing-->
         <scene sceneID="8vN-mm-6J0">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Fxt-Ar-Ixa" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="bQg-9a-5xz" customClass="MPNavigationController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Signing" id="dkJ-d3-y7Y" userLabel="Item 1"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="cJD-id-wV5">
@@ -19,27 +21,9 @@
                         <segue destination="xAr-n6-KTB" kind="relationship" relationship="rootViewController" id="wDL-FB-L0X"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fxt-Ar-Ixa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1815" y="266"/>
-        </scene>
-        <!--My eID-->
-        <scene sceneID="jYb-iA-aKp">
-            <objects>
-                <viewController id="5JI-w1-GJ6" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="N56-SA-jLv"/>
-                        <viewControllerLayoutGuide type="bottom" id="WV5-zg-BUE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="rmc-hp-x34">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="My eID" id="KiZ-Ir-b8r"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8tj-dB-MXK" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1815" y="1146"/>
         </scene>
         <!--Signed-->
         <scene sceneID="peH-oX-y2Q">
@@ -50,6 +34,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vae-w1-17S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1851" y="672"/>
+        </scene>
+        <!--MyEid-->
+        <scene sceneID="soZ-1K-mUT">
+            <objects>
+                <viewControllerPlaceholder storyboardName="MyEid" id="FAY-20-bhQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="My eID" id="w9D-e6-WVW"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vAi-2t-nVj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2025" y="831"/>
         </scene>
         <!--Landing Tab Bar Controller-->
         <scene sceneID="XXu-xe-V6X">
@@ -63,7 +57,7 @@
                     <connections>
                         <segue destination="bQg-9a-5xz" kind="relationship" relationship="viewControllers" id="f9a-6e-RBo"/>
                         <segue destination="b4N-MH-WmG" kind="relationship" relationship="viewControllers" id="sli-3R-Gwg"/>
-                        <segue destination="5JI-w1-GJ6" kind="relationship" relationship="viewControllers" id="Ujd-2X-wST"/>
+                        <segue destination="FAY-20-bhQ" kind="relationship" relationship="viewControllers" id="Wlz-hJ-Kus"/>
                         <segue destination="OY8-qd-vwj" kind="relationship" relationship="viewControllers" id="1Wo-I3-M5I"/>
                     </connections>
                 </tabBarController>
@@ -74,7 +68,6 @@
         <!--ViewController-->
         <scene sceneID="lxe-G7-1WV">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="PTZ-9K-tfv" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="xAr-n6-KTB" userLabel="ViewController" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="HKj-QD-uCB"/>
@@ -85,17 +78,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NYx-zB-Cs8">
+                                <rect key="frame" x="134.5" y="94" width="106" height="30"/>
                                 <state key="normal" title="Open container"/>
                                 <connections>
                                     <action selector="openContainerButtonPressed:" destination="xAr-n6-KTB" eventType="touchUpInside" id="bWl-Pi-fpl"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l1K-UJ-FLm">
+                                <rect key="frame" x="20" y="154" width="335" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="04M-CC-EKl">
+                                <rect key="frame" x="129.5" y="201" width="116" height="30"/>
                                 <state key="normal" title="Read data action"/>
                                 <connections>
                                     <action selector="readCardActionPressed:" destination="xAr-n6-KTB" eventType="touchUpInside" id="bks-OV-nQ2"/>
@@ -119,6 +115,7 @@
                         <outlet property="openContainerButton" destination="NYx-zB-Cs8" id="crG-WV-1f3"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PTZ-9K-tfv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1063" y="266"/>
         </scene>
